# ros-distributed-systemd-start

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: demo.launch
param/: master.yaml
scripts/: config.py  distributed_ros_master
